# laview-nvr-video-downloader

./: .gitignore  Makefile  README.md  download_all_cameras_today.py  fix_vid.sh  pyproject.toml  requirements.txt  security_cam_analyzer.py  setup.py  sync-upstream.sh  test_camera2_download.py  video_download.py
laview_dl/: __init__.py  camerasdk.py  cli.py  config.py  date_parser.py  logging.py  time_interval.py  track.py  utils.py  work.py
nvr_analysis/: LICENSE  Makefile  README.md  __init__.py  cli.py  example_usage.py  metadata_extractor.py  pyproject.toml  requirements.txt  timestamp_extractor.py  video_analyzer.py
nvr_analysis/tests/: __init__.py  test_cli.py  test_metadata_extractor.py  test_timestamp_extractor.py  test_video_analyzer.py
release/: video_download.py
src/: camera_sdk.py
tests/: test_camera_sdk.py  test_time_interval.py  test_track.py  test_utils.py
