[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laview-nvr-video-downloader"
version = "0.1.0"
description = "A Python package for downloading video files from LaView NVRs & cameras via ISAPI interface"
readme = "README.md"
license = "MIT"
authors = [
    {name = "LaView NVR Video Downloader Contributors", email = "contributors@laview-dl.dev"}
]
maintainers = [
    {name = "LaView NVR Video Downloader Maintainers", email = "maintainers@laview-dl.dev"}
]
keywords = ["laview", "nvr", "video", "download", "security", "camera", "isapi", "hikvision"]
urls = {Homepage = "https://github.com/dapperfu/laview-nvr-video-downloader", Repository = "https://github.com/dapperfu/laview-nvr-video-downloader"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: System :: Networking",
    "Topic :: Security",
    "Topic :: System :: Archiving",
    "Environment :: Console",
    "Natural Language :: English",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
    "tomli-w>=1.0.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pre-commit>=3.0.0",
    "safety>=2.0.0",
]
analysis = [
    "moviepy>=1.0.3",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "pytesseract>=0.3.10",
    "easyocr>=1.7.0",
]

[project.scripts]
laview-cli = "laview_dl.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["laview_dl*"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

# Ruff configuration
[tool.ruff]
target-version = "py38"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "ARG001", # unused-function-args
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "Q",  # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "PIE", # flake8-pie
    "N",  # pep8-naming
    "PLR", # pylint refactor
    "PLW", # pylint warnings
    "PL",  # pylint
    "TRY", # tryceratops
    "NPY", # numpy
    "AIR", # flake8-airflow
    "COM", # flake8-commas
    "C90", # mccabe
    "DTZ", # flake8-datetimez
    "T20", # flake8-print
    "FA",  # flake8-fixme
    "ISC", # flake8-implicit-str-concat
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "PTH", # flake8-use-pathlib
    "YTT", # flake8-2020
    "BLE", # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "A",   # flake8-builtins
    "COM812", # missing-trailing-comma
    "COM818", # trailing-comma-on-bare-tuple
    "COM819", # trailing-comma-missing-parens
    "RUF001", # unused-noqa
    "RUF002", # docstring-in-exception
    "RUF003", # commented-out-code
    "RUF005", # collection-literal-concatenation
    "RUF006", # asyncio-dont-use-import-time
    "RUF007", # explicit-string-concatenation
    "RUF008", # f-string-missing-placeholders
    "RUF009", # function-uses-loop-variable
    "RUF010", # explicit-f-string-type-conversion
    "RUF011", # explicit-encode-decode
    "RUF012", # mutable-class-default
    "RUF013", # unused-imports
    "RUF015", # unnecessary-iterable-allocation-for-first-element
    "RUF016", # dangerous-mutable-default-argument
    "RUF017", # quadratic-list-summation
    "RUF018", # unused-imports
    "RUF019", # unused-imports
    "RUF020", # no-return-argument-annotation-in-stub
    "RUF021", # parenthesize-chained-operators
    "RUF022", # unsorted-dunder-all
    "RUF023", # function-uses-loop-variable
    "RUF024", # no-unnecessary-dict-comprehension-for-literal
    "RUF025", # no-unnecessary-dict-comprehension
    "RUF026", # no-unnecessary-list-comprehension
    "RUF027", # no-unnecessary-set-comprehension
    "RUF028", # no-unnecessary-dict-kwargs
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "PLR0913", # too many arguments
    "PLR0912", # too many branches
    "PLR0915", # too many statements
    "PLR0911", # too many return statements
    "PLR2004", # magic value used in comparison
    "PLR0916", # too many boolean expressions
    "PLR0917", # too many positional arguments
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/**/*" = ["PLR2004", "PLR0913", "PLR0912", "PLR0915", "PLR0911", "PLR0916", "PLR0917"]

# Black configuration
[tool.black]
target-version = ['py38']
line-length = 88
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "requests.*",
    "xml.*",
    "argparse.*",
    "datetime.*",
    "os.*",
    "sys.*",
    "time.*",
    "uuid.*",
    "shutil.*",
    "socket.*",
    "re.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["laview_dl"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/build/*",
    "*/dist/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

